fix(nav): menu list will be covered if height less than menu list

--- a/as-web/src/app/core/layout/style/_sider.less
+++ b/as-web/src/app/core/layout/style/_sider.less
@@ -27,6 +27,12 @@
   }
 }
 
+.layout-side-list-wrap {
+  scrollbar-width: none !important;
+  overflow: hidden scroll !important;
+  padding-bottom: 48px;
+}
+
 .bg-blue-lighter {
   transition: all .3s;
 }
